meja/tests/row-pattern-missing-args.stderr
File "tests/row-pattern-missing-args.meja", line 3, characters 6-8:
Error: Incompatible types [>`A(int)] and [>`A]:
       Cannot unify [>`A(int)] and [>`A]:
       the constructor `A has different arities.
