meja/tests/row-pattern-missing-args.meja
let f = fun (x : [> `A(int)]) => {
  switch (x) {
    | `A => ()
    | _ => ()
  };
};
